--- a/TradeApp/Screens/Trade/EURGBP.html
+++ b/TradeApp/Screens/Trade/EURGBP.html
@@ -1,13 +1,13 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
-  <div id="tradingview_125ce"></div>
+  <div id="tradingview_3828e"></div>
   <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
   "autosize": true,
-  "symbol": "NASDAQ:AAPL",
+  "symbol": "OANDA:EURGBP",
   "interval": "D",
   "timezone": "Etc/UTC",
   "theme": "dark",
@@ -18,7 +18,7 @@
   "hide_top_toolbar": true,
   "hide_legend": true,
   "save_image": false,
-  "container_id": "tradingview_125ce"
+  "container_id": "tradingview_3828e"
 }
   );
   </script>
